# aoc-2025

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs
src/day/: day00.rs  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs
src/infra/: input.rs  measure.rs  mod.rs  solution.rs  solver.rs
src/util/: grid.rs  mod.rs  position.rs  solver.rs
